updated compose yaml for security args

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,6 +1,6 @@
 FROM mariadb:10.4.6
 
-ENV MYSQL_ROOT_PASSWORD xxxxFAKEPASSWDxxxx
+ARG dbpass
 
 COPY ./gargoyleRootCA.crt.pem /etc/ssl/certs/
 COPY ./gargoyleRootCA.crt.pem /etc/mysql/
@@ -12,5 +12,7 @@ COPY ./gargoyleClientDb.key.pem /etc/mysql/
 COPY ./my.cnf /etc/mysql/
 
 COPY osg.sql /docker-entrypoint-initdb.d/
+
+RUN sed -i "s/xxxFAKEPASSWDxxx/$dbpass/g" /docker-entrypoint-initdb.d/osg.sql
 
 EXPOSE 3306
