--- a/engine/logstash.conf
+++ b/engine/logstash.conf
@@ -18,7 +18,12 @@ filter {
 output {
   if [type] == "gargoyle" {
     elasticsearch {
-      hosts => ["es-data:9200"]
+      ssl => true
+      ssl_certificate_verification => true
+      user => "${ELASTIC_USER}"
+      password => "${ELASTIC_PW}"
+      cacert => "/etc/logstash/gargoyleRootCA.crt.pem"
+      hosts => ["https://g-elastic:9200"]
       index => "gargoyle-%{+YYYY.MM.dd}"
     } 
   }
