update to pki and vars

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,24 +1,39 @@
+# gargoyle FLask API container
+
 FROM python:3.7
 
+ARG cacrt
+ARG servercrt
+ARG serverkey
+ARG clientcrt
+ARG clientkey
+
+COPY $cacrt /etc/ssl/certs/
+COPY $cacrt /app/
+COPY $servercrt /app/
+COPY $serverkey /app/
+COPY $clientcrt /app/
+COPY $clientkey /app/
+
 EXPOSE 5000
-
-RUN mkdir -p /usr/local/share/ca-certificates/gargoyle
-
-COPY ./gargoyleRootCA.crt.pem /usr/local/share/ca-certificates/gargoyle/gargoyleRootCA.crt
-COPY ./gargoyleRootCA.crt.pem /app/
-COPY ./gargoyleServer.crt.pem /app/
-COPY ./gargoyleServer.key.pem /app/
-COPY ./gargoyleClientDb.crt.pem /app/
-COPY ./gargoyleClientDb.key.pem /app/
-
-RUN update-ca-certificates
 
 WORKDIR /app
 
 COPY requirements.txt /app
 
-RUN pip install -r requirements.txt
+RUN mkdir -p /usr/local/share/ca-certificates/gargoyle
+
+COPY $cacrt /usr/local/share/ca-certificates/gargoyle/gRootCA_v2.crt
+
+RUN update-ca-certificates
+
+RUN pip3 install -r requirements.txt
 
 COPY app.py /app
 
+ENV http_proxy=
+ENV https_proxy=
+
 CMD python3 app.py
+
+
