--- a/db/my.cnf
+++ b/db/my.cnf
@@ -148,9 +148,9 @@ innodb_flush_method	= O_DIRECT
 # For generating SSL certificates I recommend the OpenSSL GUI "tinyca".
 #
 ###
-ssl-ca=/etc/mysql/gargoyleRootCA.crt.pem
-ssl-cert=/etc/mysql/gargoyleServer.crt.pem
-ssl-key=/etc/mysql/gargoyleServer.key.pem
+ssl-ca=/etc/mysql/xxxCACRTxxx
+ssl-cert=/etc/mysql/xxxSERVERCRTxxx
+ssl-key=/etc/mysql/xxxSERVERKEYxxx
 tls_version=TLSv1.2
 ###
 #
@@ -180,9 +180,9 @@ max_allowed_packet	= 16M
 
 [mysql]
 #no-auto-rehash	# faster start of mysql but no tab completion
-ssl-ca=/etc/mysql/gargoyleRootCA.crt.pem
-ssl-cert=/etc/mysql/gargoyleClientDb.crt.pem
-ssl-key=/etc/mysql/gargoyleClientDb.key.pem
+ssl-ca=/etc/mysql/xxxCACRTxxx
+ssl-cert=/etc/mysql/xxxCLIENTCRTxxx
+ssl-key=/etc/mysql/xxxCLIENTKEYxxx
 
 [isamchk]
 key_buffer		= 16M
