--- a/engine/logstash.conf
+++ b/engine/logstash.conf
@@ -22,8 +22,8 @@ output {
       ssl_certificate_verification => true
       user => "${ELASTIC_USER}"
       password => "${ELASTIC_PW}"
-      cacert => "/etc/logstash/gargoyleRootCA.crt.pem"
-      hosts => ["https://g-elastic:9200"]
+      cacert => "/etc/logstash/${CACRT_FILE}"
+      hosts => ["https://${ELASTIC_HOST}:${ELASTIC_BACKPORT}"]
       index => "gargoyle-%{+YYYY.MM.dd}"
     } 
   }
